fixed and aligned items on the left side of the intro page and go a functional button

--- a/portfolio/src/components/intro/intro.scss
+++ b/portfolio/src/components/intro/intro.scss
@@ -36,6 +36,7 @@
         flex: 0.5;
         position: relative;
 
+
         .wrapper{
             width: 100%;
             height: 100%;
@@ -43,6 +44,8 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
+
+            
             
 
             @include mobile{
@@ -50,11 +53,20 @@
                 align-items: center;
             }
 
+            
+
+      
+            a {
+                display: flex;
+                text-decoration: none;
+                margin-right: 60px;
+            }
+
 
             h1{
                 font-size: 60px;
                 margin: 10px 0;
-                color: rgb(29, 95, 2);
+                color: grey;
 
                 @include mobile{
                     font-size: 40px;
@@ -96,22 +108,24 @@
                     }
                 }
             }
-        }
-        a {
-            position: absolute;
-            bottom: 10px;
-            left: 40%;
 
-            img {
-                width: 30px;
-                background-color: transparent;
-                animation: arrowBlink 2s infinite;
+            button {
+                height: 40px;
+                width: 140px;
+                margin-top: 30px;
+                background-color: green;
+                border: whitesmoke;
+                border-radius: 5%;
+                cursor: pointer;
+                font-size: 20px;
+                font-weight: 600;
             }
 
-            @keyframes arrowBlink {
-                100%{
-                    opacity: 0;
-                }
+            .icon {
+                align-items: center;
+                vertical-align:text-bottom;
+                margin-right: 10px;
+                margin-top: 2px;
             }
         }
     }
