--- a/portfolio/src/components/topbar/topbar.scss
+++ b/portfolio/src/components/topbar/topbar.scss
@@ -1,105 +1,99 @@
 @import "../../global.scss";
 
-.topbar{
-    width: 100%;
-    height: 70px;
-    background: linear-gradient(90deg, rgb(14, 12, 12) 2%, rgb(53, 146, 17) 100%);
-    color: rgba(245, 245, 245, 0.877);
-    position: fixed;
-    top: 0;
-    z-index: 3;
-    transition: all 1s ease;
+.topbar {
+  width: 100%;
+  height: 70px;
+  background: whitesmoke;
+  color: green;
+  position: fixed;
+  top: 0;
+  z-index: 3;
+  transition: all 1s ease;
+  text-decoration: none;
+
+  a {
+    color: green;
     text-decoration: none;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-    a{
-        color: whitesmoke;
+  a:hover {
+    color: rgb(13, 193, 224);
+  }
+
+  .wrapper {
+    padding: 10px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .left {
+      display: flex;
+      align-items: center;
+
+      .logo {
+        font-size: 40px;
+        font-weight: 700;
         text-decoration: none;
-    }
+        color: inherit;
+        margin-right: 40px;
+      }
 
-    a:hover {
-        color: rgb(13, 193, 224);
-    }
-
-    .wrapper{
-        padding: 10px 30px;
+      .itemContainer {
         display: flex;
         align-items: center;
+        margin-right: 30px;
+
+        .icon {
+          font-size: 18px;
+          margin-right: 5px;
+        }
+
+        span {
+          font-size: 15px;
+          font-weight: 500;
+        }
+      }
+    }
+    .right {
+        display: flex;
+        align-items: center;
+
+      a {
+        color: green;
+        text-decoration: none;
         justify-content: space-between;
+        margin-right: 90px;
+        font-size: 25px;
+        font-weight: 900;
 
-        .left{
-            display: flex;
-            align-items: center;
+      }
+    }
+  }
 
-            .logo{
-                font-size: 40px;
-                font-weight: 700;
-                text-decoration: none;
-                color: inherit;
-                margin-right: 40px;
-            }
+  &.active {
+    background-color: whitesmoke;
+    color: rgb(53, 146, 17);
 
-            .itemContainer{
-                display: flex;
-                align-items: center;
-                margin-right: 30px;
-
-                .icon{
-                    font-size: 18px;
-                    margin-right: 5px;
-                }
-
-                span{
-                    font-size: 15px;
-                    font-weight: 500;
-                }
-
-                
-            }
-        }
-        .right{
-            .hamburger{
-                width: 32px;
-                height: 25px;
-                color: whitesmoke;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-                cursor: pointer;
-
-                span{
-                    width: 100%;
-                    height: 3px;
-                    background-color: whitesmoke;
-                    transform-origin: left;
-                    transition: all 2s ease;
-                }
-            }
-        }
+    span {
+      color: whitesmoke;
     }
 
-    &.active{
-        background-color: whitesmoke;
-        color: rgb(53, 146, 17);
-
-
-        span{
-            color:whitesmoke;
+    .hamburger {
+      span {
+        &:first-child {
+          background-color: black;
+          transform: rotate(45deg);
         }
-
-        .hamburger{
-            span{
-                &:first-child{
-                    background-color: black;
-                    transform: rotate(45deg);
-                }
-                &:nth-child(2){
-                    opacity: 0;
-                }
-                &:last-child{
-                    background-color: black;
-                    transform: rotate(-45deg);
-                }
-            }
+        &:nth-child(2) {
+          opacity: 0;
         }
+        &:last-child {
+          background-color: black;
+          transform: rotate(-45deg);
+        }
+      }
     }
+  }
 }
